--- a/app/views/users/manageUsers.html.twig
+++ b/app/views/users/manageUsers.html.twig
@@ -3,7 +3,7 @@
 {% import 'includes/permissions.inc.twig' as macros %}
 {% block content %}
 
-    <div class="container">
+    <div class="container content-style">
         <div class="table-responsive">
             <table class="table table-striped table-hover mt-5">
             <thead>
