--- a/app/views/includes/comments.inc.twig
+++ b/app/views/includes/comments.inc.twig
@@ -6,7 +6,8 @@
         <div class="comment" id="comment_{{ comment.id }}">
             <h6 style="font-weight: bold;"><i class="fas fa-comment me-1"></i> {{ comment.author }}</h6> <h6 class="text-muted">{{ comment.created_at }}</h6>
             <p>{{ comment.content }}</p>
-            {% if session.user is not empty and (session.user.username == comment.author or session.user.role == 'admin')  %}
+            {% if (session.user is not empty) and ( (session.user.id == comment.user_id)
+                or session.user.role is same as('admin') or session.user.role is same as('superadmin'))  %}
                 <button class="myBtn btn btn-danger" onclick="deleteComment({{ comment.id }})" name="submit" type="submit">Smazat komentář</button>
             {% endif %}
 
@@ -14,7 +15,8 @@
                 <div class="replyDiv" id="reply_{{ reply.id }}">
                     <h6 style="font-weight: bold;"><i class="fas fa-comment-dots"></i> {{ reply.author.username }}</h6> <h6 class="text-muted">{{ reply.created_at }}</h6>
                     <p>{{ reply.content }}</p>
-                    {% if session.user is not empty and (session.user.username == comment.author or session.user.role == 'admin')  %}
+                    {% if (session.user is not empty) and ( (session.user.id == reply.user_id)
+                        or session.user.role is same as('admin') or session.user.role is same as('superadmin'))  %}
                         <button class="myBtn btn btn-danger" onclick="deleteReply({{ reply.id }}, {{ post.id }})" name="submit" type="submit">Smazat reply(ajax)</button>
                     {% endif %}
                 </div>
