--- a/app/views/posts/create.html.twig
+++ b/app/views/posts/create.html.twig
@@ -1,13 +1,13 @@
 {% extends('default.html.twig') %}
 
 {% block content %}
-    <div class="container center mb-2">
+    <div class="container center form_back_style">
         <h1 class="text-center pt-5">Vytvořit nový článek</h1>
 
         <form action="{{ constant('URLROOT')}}/posts/create" method="POST" enctype="multipart/form-data" accept-charset="UTF-8">
             <div class="form-group mb-4 form-item">
-                Nadpis
-                <input class="form-control"  type="text" name="title" placeholder="Titulek článku *" value="{{ title }}" required>
+                <label>Nadpis</label>
+                <input maxlength="255" class="form-control"  type="text" name="title" placeholder="Titulek článku *" value="{{ title }}" required>
                     <span class="invalidFeedBack">
                         {{ titleError }}
                     </span>
@@ -15,7 +15,7 @@
             </div>
 
             <div class="form-group mb-4 form-item">
-                Vložení pdf s podrobnými informacemi o příspěvku
+                <label>Vložení pdf s podrobnými informacemi o příspěvku</label>
                 <input class="form-control" type="file" accept="application/pdf" name="fileToUpload" placeholder="PDF soubor *" value="{{ post.file }}" required>
                 <span class="invalidFeedBack">
                     {{ fileError }}
@@ -24,10 +24,8 @@
             </div>
 
             <div class="form-group mb-4 form-item">
-                Popisek
-                <textarea rows="3" class="form-control" name="description" placeholder="Zadejte popisek">
-                    {{ description }}
-                </textarea>
+                <label> Krátký popis (maximálně 255 znaků) </label>
+                <textarea maxlength="255" rows="3" class="form-control" name="description" placeholder="Zadejte popisek">{{ description }}</textarea>
 
             </div>
 
