--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -5,7 +5,7 @@
 <div class="container container-login">
     <div class="wrapper-login">
         <div class="row justify-content-center">
-            <div class="col-sm-8 col-md-7 col-lg-5 col-xl-5">
+            <div class="col-sm-8 col-md-7 col-lg-5 col-xl-5 form_back_style">
                 <h2>Přihlásit se</h2>
                 <form action="{{ constant('URLROOT')}}/users/login" method="POST" id="loginForm" onkeydown="logIn()">
                         <div class="form-outline mb-4">
