--- a/app/views/users/register.html.twig
+++ b/app/views/users/register.html.twig
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container container-login wrapper-login">
     <div class="row justify-content-center">
-        <div class="col-sm-8 col-md-7 col-lg-5 col-xl-5">
+        <div class="col-sm-8 col-md-7 col-lg-5 col-xl-5 form_back_style">
             <h2>Registrace</h2>
 
             <form action="{{ constant('URLROOT')}}/users/register" method="POST" id="registrationForm" onkeydown="registrationUp()">
