--- a/app/views/users/login.html.twig
+++ b/app/views/users/login.html.twig
@@ -47,10 +47,14 @@
                         <button class="myBtn btn btn-primary w-100 h1" id="loginButton" disabled="disabled" type="submit" value="submit">Odeslat</button>
                         <div class="text-center">
                             <p class="options">
-                                Ještě nemáte účet?<a href="{{ constant('URLROOT')}}/users/register">Registrace</a></p>
+                                Ještě nemáte účet?<a href="{{ constant('URLROOT')}}/users/register">Registrace</a>
+                            </p>
                         </div>
 
                 </form>
+                <p>
+                    <a href="{{ constant('URLROOT')}}/users/resetPassword">Zapomenuté heslo?</a>
+                </p>
             </div>
         </div>
     </div>
