--- a/app/views/users/changePassword.html.twig
+++ b/app/views/users/changePassword.html.twig
@@ -6,7 +6,7 @@
         <div class="wrapper-login">
             <div class="row justify-content-center">
                 <div class="col-sm-8 col-md-7 col-lg-5 col-xl-4 form_back_style">
-                    <h2>Změnit heslo</h2>
+                    <h2 class="text-uppercase">Změnit heslo</h2>
                     <form action="{{ constant('URLROOT')}}/users/changePassword" method="POST" id="changePasswordForm" onkeydown="changePassword()">
 
                         <div class="form-outline mb-4">
